# RAGtor

./: .gitignore  README.md  additional-requirements.txt  checking_vector_db_things.ipynb  pyproject.toml
data/: example_markdown.md  example_md_to_text.txt  loaded_pdfs_id.json
data/db/: index.faiss  index.pkl
data/prompts/: prompts.ipynb  prompts.json
ragtor/: app.py  chunk_class.py  clustering_utils.py  config.py  doc_class.py  encoding_utils.py  experiments.ipynb  generation.py  rag.py
